--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "description": "Authentication module for the SaaS application",
   "private": true,
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "devDependencies": {
-    "@saas/prettier": "workspace:*",
-    "@saas/eslint-config": "workspace:*",
-    "@saas/tsconfig": "workspace:*"
+    "@saas/eslint-config": "workspace:^",
+    "@saas/prettier": "workspace:^",
+    "@saas/tsconfig": "workspace:^"
   },
   "eslintConfig": {
     "extends": [
       "@saas/eslint-config/library"
     ]
   },
-  "prettier": "@saas/prettier"
+  "prettier": "@saas/prettier",
+  "dependencies": {
+    "@casl/ability": "^6.7.3"
+  }
 }
