--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "API for the SaaS application",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/http/server.ts"
   },
   "dependencies": {
-    "@saas/auth": "workspace:*"
+    "@fastify/cors": "^11.0.1",
+    "@saas/auth": "workspace:*",
+    "fastify": "^5.4.0",
+    "fastify-type-provider-zod": "^5.0.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@saas/eslint-config": "workspace:*",
