--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@prisma/client": "5.12.1",
     "@saas/auth": "workspace:*",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
+    "prisma": "5.12.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
