--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,12 +9,14 @@
     "@fastify/cors": "^11.0.1",
     "@prisma/client": "5.12.1",
     "@saas/auth": "workspace:*",
+    "bcryptjs": "^3.0.2",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
     "prisma": "5.12.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@saas/eslint-config": "workspace:*",
     "@saas/prettier": "workspace:*",
     "@saas/tsconfig": "workspace:*",
