--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,9 @@
     "@types/node": "^24.0.3",
     "tsx": "^4.20.3"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "prettier": "@saas/prettier",
   "eslintConfig": {
     "extends": [
