--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,13 +7,17 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "5.12.1",
     "@saas/auth": "workspace:*",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
+    "fastify-zod-openapi": "^4.1.2",
     "prisma": "5.12.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zod-openapi": "^4.2.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
