--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "@saas/auth": "workspace:*",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.4.0",
+    "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^5.0.1",
     "fastify-zod-openapi": "^4.1.2",
     "prisma": "5.12.1",
