--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "API for the SaaS application",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "pnpm env:load tsx watch src/http/server.ts",
+    "db:migrate": "pnpm env:load prisma migrate dev",
+    "db:studio": "pnpm env:load prisma studio",
+    "env:load": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
@@ -12,6 +15,7 @@
     "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "5.12.1",
     "@saas/auth": "workspace:*",
+    "@saas/env": "workspace:*",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
@@ -27,10 +31,11 @@
     "@saas/prettier": "workspace:*",
     "@saas/tsconfig": "workspace:*",
     "@types/node": "^24.0.3",
+    "dotenv-cli": "^8.0.0",
     "tsx": "^4.20.3"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "pnpm env:load tsx prisma/seed.ts"
   },
   "prettier": "@saas/prettier",
   "eslintConfig": {
