--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,17 +14,18 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@saas/auth": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.0.0",
     "ky": "^1.8.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67",
-    "@saas/auth": "workspace:*"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@saas/eslint-config": "workspace:*",
