--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.0.0",
+    "dayjs": "^1.11.13",
     "ky": "^1.8.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
