--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "turbo run lint"
   },
   "devDependencies": {
-    "typescript": "5.8.2"
+    "turbo": "latest"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
